# mcd2zarr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: build-and-publish.yml  pre-commit.yml
src/mcd2zarr/: __init__.py  __main__.py  mcd2zarr.py
