[metadata]
name = mcd2zarr
url = https://github.com/BodenmillerGroup/mcd2zarr
author = Jonas Windhager
author_email = jonas.windhager@uzh.ch
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license = MIT
license_files = LICENSE
description = Convert MCD files to Zarr
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    click
    numpy
    ome-zarr
    readimc
    zarr
python_requires = >=3.8
package_dir =
    = src
packages = find:

[options.entry_points]
console_scripts =
    mcd2zarr = mcd2zarr.__main__:main

[options.packages.find]
where=src

[flake8]
max-line-length = 88
extend-ignore = E203

[pylint]
max-line-length = 88

[pycodestyle]
ignore = E203
max_line_length = 88
