[metadata]
name = mcd2zarr
url = https://github.com/BodenmillerGroup/mcd2zarr
author = Jonas Windhager
author_email = jonas.windhager@uzh.ch
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
license = MIT
license_files = LICENSE
description = Command line tool to convert MCD files to Zarr
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    click
    numpy
    ome-zarr
    readimc
    zarr
python_requires = >=3.8
package_dir =
    = src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    mcd2zarr = mcd2zarr.__main__:main
